# miniaudio-dart

./: .gitignore  CMakeLists.txt  README.md  android-build.sh  ios-build.sh  miniaudio.g.dart  pubspec.yaml
example/: miniaudio-dart_example.dart
example/flutter_app/: pubspec.yaml
example/flutter_app/android/app/: build.gradle
example/flutter_app/lib/: main.dart
lib/: miniaudio-dart.dart  miniaudio.dart
lib/src/bindings/: bindings.dart  miniaudio-c.dart
source/: extra.h  miniaudio.c
test/: miniaudio-dart_test.dart
